# Media-Platform

./: .gitignore  README.md  client.py  createMetaData.py  fileServer.py  loginClientSide.py  loginServerSide.py  sendFileClient.py  server.py  uploadsDatabase.py  userFollowTest.py  userOperations.py  videotest.py
CLIENTCODE/: fileTypeTest.py  loginClientSide.py  sendFileClient.py
RUSTTEST/: Cargo.toml
RUSTTEST/src/: main.rs
SERVERCODE/: createMetaData.py  fileServer.py  loginServerSide.py  secret_keys.js  tokenGenerator.py  uploadsDatabase.py  userOperations.py
SERVERCODE/databaseServer/: databaseServer.js  mongoDBFuncitons.js  mongoDBaccess.js  mongoDBconnection.js  package-lock.json  package.json
SERVERCODE/searchServer/: package-lock.json  package.json  searchServer.js  users.json
SERVERCODE/uploadServer/: fileStoreSpeed.js  package-lock.json  package.json  uploadserver.js
ServerFiles/: DATABASE QUERIES.txt  FOLLOW_FORMAT.json  UPLOAD_FORMAT.json  USER_FORMAT.json  UserDatabase.db  adminUser.json
ServerFiles/USERS/06bc40cf41219c012cbc2d6597283326/VIDEOS/: theroad[optimvsgrimeremix][newfinal]_metaData.txt
ServerFiles/USERS/xxxxxxx/UPLOADS/: Am97iz9
TAURI/: README.md  package-lock.json  package.json  vite.config.js
TAURI/VIDEOPLATFORMGUI/: package-lock.json  package.json
TAURI/VIDEOPLATFORMGUI/src-tauri/: Cargo.toml  tauri.conf.json
TAURI/src/: App.css  App.jsx  Login.css  app.css  app.jsx  get_downloaded.jsx  homepage.jsx  main.jsx  navigation.css  navigation.jsx  navigationBar.css  serverInfo.js  style.css
TAURI/src-tauri/: Cargo.toml  tauri.conf.json
TAURI/src-tauri/src/: download_file.rs  main.rs  pull_uploads.rs  uploadFile.rs  upload_file.rs  view_uploads.rs
TAURI/src/routes/: createAccount.css  createAccount.jsx  editAccount.css  editAccount.jsx  login.css  login.jsx  logout.css  logout.jsx  profile.jsx  root.jsx  upload.jsx  uploadREGULAR.jsx  uploadseoncdary.jsx  userPage.jsx  userSearchPage.jsx  userpage.css  usersearchpage.css  viewDownloads.jsx  viewUpload.jsx
filestoSend/: The Road [Optimvs Grime Remix] [New Final]_metaData.txt  metaData.txt  theroad[optimvsgrimeremix][newfinal]_metaData.txt
