[package]
name = "video-platformgui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
sha2 = "0.10.6"
hex-literal = "0.3.4"
serde = { version = "1.0.152", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }
mongodb = "2.3.1"
tokio = {version = "1.24.2", features = ["full"] }
futures = "0.3.25"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
