[package]
name = "video-platformgui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
sha2 = "0.10.6"
hex-literal = "0.4.1"
tauri = { version = "1.2", features = ["fs-all", "shell-open"] }
mongodb = "2.3.1"
futures = "0.3.25"
dict = "0.1.5"
rand = "0.8.5"
nanorand = "0.7.0"
reqwest = {version = "0.11.18", features = ["json", "stream"] }
serde_json = "1.0.99"
serde = { version = "1.0.166", features = ["derive"] }
hex = "0.4.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
